--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,6 @@
 @import "components/index";
 @import "pages/index";
 @import "components/card";
+@import "components/garage_card";
+@import "components/button";
+@import "favourites/index";
